# meltano-poc

./: .gitignore  Dockerfile  README.md  docker-compose.yml  meltano.yml  pyproject.toml
projects/dagster/: README.md  pyproject.toml  setup.cfg  setup.py
projects/dagster/el_meltano.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
projects/dagster/tmp_vm_p7m6/history/: runs.db
projects/dagster/tmp_vm_p7m6/history/runs/: index.db
projects/dagster/tmp_vm_p7m6/schedules/: schedules.db
projects/meltano/: meltano.yml  requirements.txt
