[tool.poetry]
name = "el-meltano"
version = "0.1.0"
description = ""
authors = ["alfredo-ben <alfredo@thanksben.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.7,<3.12"
dagster = "^1.3.10"
meltano = "^2.19.1"
psycopg2 = "^2.9.6"
dagit = "^1.3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
